[package]
name = "geo-bounded-voronoi"
version = "0.1.0"
edition = "2021"
authors = ["Planters"]

[dependencies]
approx = "0.5.1"
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
getset = "0.1.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
voronoice = "0.2.0"